# QtForge

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  Doxyfile  LICENSE  README.md  WARP.md  debug_python_bridge.py  debug_python_bridge_file.py  meson.build  meson_options.txt  mkdocs.yml  mypy.ini  pyproject.toml  python_bridge.py  run_all_tests.ps1  run_test.ps1  simple_library_test.cpp  simple_validation.cpp  test_bridge_communication.py  test_message_types_refactor.cpp  test_pre_commit.py  xmake.lua
examples/: CMakeLists.txt  FEATURE_VERIFICATION.md  MIGRATION_GUIDE.md  README.md  advanced_plugin_interfaces.py  basic_usage.py  comprehensive_demo.cpp  enhanced_loader_demo.cpp  lua_bridge_test.cpp  lua_example_plugin.lua  lua_test_plugin.lua  meson.build  plugin_management.py  qtforge_python_examples.py  sandbox_usage_example.cpp  simple_example.cpp  xmake.lua
examples/basic_plugin/: CMakeLists.txt  README.md  basic_plugin.cpp  basic_plugin.hpp  basic_plugin.json  test_basic_plugin.cpp
examples/communication_examples/: CMakeLists.txt  README.md  main.cpp
examples/lua/: 01_basic_plugin_management.lua  02_communication_and_messaging.lua  03_comprehensive_features.lua  04_advanced_features_v3_2.lua  README.md
examples/monitoring_plugin/: monitoring_plugin.json
examples/network_plugin/: network_plugin.cpp
examples/python/: 01_basic_plugin_management.py  02_communication_and_messaging.py  03_security_and_validation.py  04_orchestration_and_workflows.py  README.md  __init__.py  advanced_usage.py  run_all_examples.py  version_handling.py
examples/python_plugins/: CMakeLists.txt  README.md  sample_plugin.py  test_bridge.cpp
examples/security_plugin/: security_plugin.cpp  security_plugin.hpp  security_plugin.json  test_security_plugin.cpp
examples/service_plugin/: CMakeLists.txt  service_plugin.cpp  service_plugin.hpp  test_service_plugin.cpp
examples/ui_plugin/: CMakeLists.txt  README.md  test_ui_plugin_cli.cpp  ui_plugin.cpp  ui_plugin.hpp  ui_plugin.json  ui_plugin_commands.cpp  ui_plugin_helpers.cpp  ui_plugin_impl.cpp
examples/version_management/: version_management_example.cpp
src/: README.md  meson.build  qtplugin.cpp  qtplugin_components.cpp
src/bridges/: lua_plugin_bridge.cpp  python_plugin_bridge.cpp
src/communication/: README.md  event_system_impl.cpp  event_system_impl.hpp  factory.cpp  message_bus.cpp  message_publisher.cpp  message_publisher.hpp  message_router.cpp  message_router.hpp  plugin_service_contracts.cpp  plugin_service_discovery.cpp  request_response_service_impl.cpp  request_response_service_impl.hpp  request_response_system.cpp  statistics_collector.cpp  statistics_collector.hpp  subscription_manager.cpp  subscription_manager.hpp  typed_event_system.cpp
src/composition/: plugin_composition.cpp
src/core/: advanced_plugin_interface.cpp  dynamic_plugin_interface.cpp  lua_plugin_loader.cpp  plugin_capability_discovery.cpp  plugin_dependency_resolver.cpp  plugin_interface.cpp  plugin_lifecycle_manager.cpp  plugin_loader.cpp  plugin_manager.cpp  plugin_manager_factory_stub.cpp  plugin_manager_minimal.cpp  plugin_manager_python_bindings.cpp  plugin_manager_stub.cpp  plugin_property_system.cpp  plugin_registry.cpp
src/interfaces/: interface_validator.cpp
src/lua/: meson.build  qt_conversions.cpp  qt_conversions.hpp  qtforge_lua.cpp  qtforge_lua_bindings.hpp  qtforge_lua_minimal.cpp
src/managers/: README.md  configuration_manager.cpp  logging_manager.cpp  plugin_version_manager.cpp  plugin_version_manager_stub.cpp  resource_lifecycle.cpp  resource_manager.cpp  resource_monitor.cpp
src/marketplace/: plugin_marketplace.cpp
src/monitoring/: README.md  plugin_hot_reload_manager.cpp  plugin_metrics_collector.cpp
src/orchestration/: README.md  plugin_orchestrator.cpp
src/python/: README.md  __init__.py.in  example_usage.py  meson.build  meson_minimal.build  py.typed  qt_conversions.cpp  qt_conversions.hpp  qtforge.pyi  qtforge_python.cpp  qtforge_python_minimal.cpp  test_bindings.py  test_build.cmake  test_enhanced_bindings.py  test_minimal_bindings.py  test_pybind11.cpp
src/remote/: CMakeLists.txt  QtForgeRemote.pc.in  QtForgeRemoteConfig.cmake.in  http_plugin_loader.cpp  plugin_download_manager.cpp  remote_plugin_configuration.cpp  remote_plugin_discovery.cpp  remote_plugin_loader.cpp  remote_plugin_manager.cpp  remote_plugin_manager_extension.cpp  remote_plugin_registry_extension.cpp  remote_plugin_source.cpp  remote_plugin_validator.cpp  remote_security_manager.cpp  unified_plugin_manager.cpp
src/security/: README.md  security_manager.cpp
src/transactions/: README.md  plugin_transaction_manager.cpp
src/utils/: README.md  error_handling.cpp  version.cpp
src/workflow/: composition.cpp  error_recovery.cpp  integration.cpp  orchestration.cpp  progress_message_bus.cpp  progress_monitoring.cpp  progress_tracking.cpp  rollback_manager.cpp  state_persistence.cpp  transaction_error_handler.cpp  transactions.cpp  workflow_manager.cpp  workflow_validator.cpp
tests/: CMakeLists.txt  README.md  meson.build  mock_objects.hpp  run_all_tests.py  run_tests_with_timeout_handling.py  test_build_system.cmake  test_component_architecture.cpp  test_component_performance.cpp  test_lifecycle_compilation.cpp  test_lifecycle_manager.cpp  test_lifecycle_simple.cpp  test_manager_component_integration.cpp  test_plugin_manager.cpp  test_plugin_manager_comprehensive.cpp  test_plugin_orchestration.cpp  test_qtforge_bindings.py  validate_structure.py  verify_complete_coverage.py  xmake.lua  xmake_config_test.cpp
tests/benchmark/: CMakeLists.txt  plugin_system_benchmark.cpp
tests/bridges/: CMakeLists.txt  test_lua_plugin_bridge.cpp  test_python_bridge.cpp
tests/communication/: CMakeLists.txt  meson.build  test_message_bus.cpp  test_message_bus_simple.cpp  test_request_response_system.cpp  test_service_contracts.cpp
tests/composition/: meson.build  (+2 more)
(+857 files in other folders)
